--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "axios": "^1.1.2",
     "bootstrap-icons": "^1.9.1",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.4.2",
-    "recharts": "^2.1.14"
+    "react-uuid": "^1.0.3",
+    "recharts": "^2.1.14",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
