--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.2",
     "react-uuid": "^1.0.3",
     "recharts": "^2.1.14",
