--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.9.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.0",
